--- a/partials/helper/helper-meta-story.hbs
+++ b/partials/helper/helper-meta-story.hbs
@@ -5,7 +5,7 @@
         {{!-- Primary Tag --}}
         {{#if primary_tag}}{{#primary_tag}}
         <span class="u-meta-tag">
-            <a class="u-colorHoverPrimary u-colorInherit u-relative zindex3" href="{{url}}" aria-label="{{name}}">{{name}}</a>
+            <a class="u-colorHoverPrimary u-textCapitalize u-colorInherit u-relative zindex3" href="{{url}}" aria-label="{{name}}">{{name}}</a>
         </span>
         {{/primary_tag}}{{/if}}
     </div>
