--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -13,3 +13,5 @@ h3 { font-size: $font-size-h3 }
 h4 { font-size: $font-size-h4 }
 h5 { font-size: $font-size-h5 }
 h6 { font-size: $font-size-h6 }
+
+p { margin: 0 }
