--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -194,6 +194,10 @@
   }
 }
 
+@media #{$xl-and-up} {
+  .nav { width: 250px }
+}
+
 @media screen and (min-width:1100px) and (min-height:700px) {
   .mainMenu { font-size: 2.57vh !important }
 }
