--- a/partials/story/story.hbs
+++ b/partials/story/story.hbs
@@ -20,6 +20,7 @@
                     data-sizes="(max-width: 1000px) 400px, 600px"
                     alt="{{title}}"
                 />
+                {{#has tag="#video"}}<span class="icon icon--play icon--green">{{> "icons/play"}}</span>{{/has}}
             </figure>
         </footer>
     {{/if}}
