--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -133,6 +133,16 @@ hr {
   &--green { color: $primary-color }
 }
 
+.icon--play {
+  background-color: #fff;
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
 // Instagram
 // ==========================================================================
 .instagram {
