--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -93,6 +93,12 @@
 @media #{$md-and-up} {
   .primary-post-title { font-size: 2.5rem }
 
+  .icon--play {
+    padding: 18px;
+    width: 64px;
+    height: 64px;
+  }
+
   // Story
   .story {
     &-header {
