--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -57,7 +57,7 @@
 
 // Media query
 // ==========================================================================
-@media #{$md-and-up} {
+@media #{$xl-and-up} {
   .newsletter {
     &-wrap {
       display: flex;
