--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -2,30 +2,20 @@
     {{!-- Article Header --}}
     <header class="article-header">
         <h1 class="article-title">{{title}}</h1>
-        <div class="article-meta">
-            <div class="article-byline">
-                {{#primary_author}}<a aria-label="{{t "Post by"}} {{name}}" href="{{url}}" class="u-colorHoverPrimary u-colorInherit u-relative u-textCapitalize">{{name}}</a>{{/primary_author}}
-                <span class="article-divider text--green">/</span>
-                <time class="datetime u-meta-time" datetime="{{date format=" YYYY-MM-DD "}}">{{date published_at timeago="true"}}</time>
-            </div>
-            {{!-- Comments --}}
-            <div class="article-meta--right">
-                <div class="js-comments-open u-pointer">
-                    <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span> Comments
-                </div>
-            </div>
-        </div>
+        {{!-- Article Meta (author - read time - comments) - partials/article/article-meta.hbs --}}
+        {{> "article/article-meta"}}
     </header>
     {{!-- Article Body --}}
-    <div class="article-body">
+    <div class="article-body u-relative">
         {{#if feature_image}}
-        <figure class="article-image u-block u-marginAuto u-textAlignCenter">
+        <figure class="article-media u-block u-marginAuto u-textAlignCenter">
             <img class="u-block u-marginAuto rimay-zoom"
                  srcset="{{img_url feature_image size="s"}} 300w,
                         {{img_url feature_image size="m"}} 600w,
                         {{img_url feature_image size="l"}} 1000w,
                         {{img_url feature_image size="xl"}} 2000w"
                 sizes="(max-width: 400px) 300px,(max-width: 730px) 600px, (max-width: 1600px) 100vw"
+                {{!-- sizes="(max-width: 730px) 100vw, (max-width: 1600px) 75vw, 1390px" --}}
                 src="{{img_url feature_image size="xl"}}"
                 alt="{{title}}"
             />
