--- a/partials/article/footer.hbs
+++ b/partials/article/footer.hbs
@@ -1,28 +1,49 @@
-<footer class="article-footer u-marginBottom30 u-flex">
-       <div class="social-share u-flex u-relative">
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                aria-label="{{t "Share on Facebook"}}"
-                onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
-                <span class="icon icon--facebook icon--white">{{> "icons/facebook"}}</span>
-            </a>
-            <a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-                aria-label="{{t "Share on Twitter"}}"
-                onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
-                <span class="icon icon--twiiter icon--white">{{> "icons/twitter"}}</span>
-            </a>
-            <a href="https://www.reddit.com/submit?url={{url absolute="true"}}&amp;title={{encode title}}"
-                aria-label="{{t "Share on Reddit"}}"
-                onclick="window.open(this.href, 'share-reddit', 'width=600,height=480');return false;">
-                <span class="icon icon--reddit icon--white">{{> "icons/reddit"}}</span>
-            </a>
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{url absolute="true"}}&amp;title={{encode title}}"
-                aria-label="{{t "Share on Linkedin"}}"
-                onclick="window.open(this.href, 'share-linkeding', 'width=600,height=480');return false;">
-                <span class="icon icon--linkeding icon--white">{{> "icons/linkedin"}}</span>
-            </a>
+<footer class="article-footer u-marginBottom30 u-clear">
+       <div class="social-share u-relative u-inlineBlock u-floatLeft">
+            <div class="u-flex">
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="u-flexCenter icon--facebook"
+                    title="{{t "Share on Facebook"}}"
+                    onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
+                    <span class="icon icon--white">{{> "icons/facebook"}}</span>
+                </a>
+                <a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="u-flexCenter icon--twitter"
+                    title="{{t "Share on Twitter"}}"
+                    onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
+                    <span class="icon icon--white">{{> "icons/twitter"}}</span>
+                </a>
+                <a href="https://www.reddit.com/submit?url={{url absolute="true"}}&amp;title={{encode title}}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="u-flexCenter icon--reddit"
+                    title="{{t "Share on Reddit"}}"
+                    onclick="window.open(this.href, 'share-reddit', 'width=600,height=480');return false;">
+                    <span class="icon icon--white">{{> "icons/reddit"}}</span>
+                </a>
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url={{url absolute="true"}}&amp;title={{encode title}}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="u-flexCenter icon--linkedin"
+                    title="{{t "Share on Linkedin"}}"
+                    onclick="window.open(this.href, 'share-linkedin', 'width=600,height=480');return false;">
+                    <span class="icon icon--white">{{> "icons/linkedin"}}</span>
+                </a>
+                <a href="whatsapp://send?text={{url absolute="true"}}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="u-flexCenter icon--whatsapp u-hide-after-md"
+                    title="{{t "Share on WhatsApp"}}">
+                    <span class="icon icon--whatsapp icon--white">{{> "icons/whatsapp"}}</span>
+                </a>
+            </div>
        </div>
 
-       <div class="shortlink u-flex u-relative">
+       <div class="shortlink u-inlineBlock u-relative u-hide-before-md">
            <input class="shortlink-input" readonly="" title="{{t "Article Shortlink"}}" type="text" value="{{url absolute="true"}}">
            <span class="shortlink-indicator">{{t "copy"}}</span>
        </div>
