--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,18 +1,18 @@
 h1, h2, h3, h4, h5, h6 {
   @extend %primary-font;
 
+  font-weight: 900;
+  letter-spacing: -0.02em;
   line-height: $headings-line-height;
-  // letter-spacing: -0.02em;
   margin: 0;
-
 }
 
-h1 { font-size: $font-size-h1 }
-h2 { font-size: $font-size-h2 }
-h3 { font-size: $font-size-h3 }
-h4 { font-size: $font-size-h4 }
-h5 { font-size: $font-size-h5 }
-h6 { font-size: $font-size-h6 }
+h1 { font-size: $font-size-md-h1 }
+h2 { font-size: $font-size-md-h2 }
+h3 { font-size: $font-size-md-h3 }
+h4 { font-size: $font-size-md-h4 }
+h5 { font-size: $font-size-md-h5 }
+h6 { font-size: $font-size-md-h6 }
 
 p { margin: 0 }
 
