--- a/partials/article/article-meta.hbs
+++ b/partials/article/article-meta.hbs
@@ -1,6 +1,6 @@
 <div class="article-meta u-meta u-flexCenter u-fontSizeSmall u-fontWeightMedium">
     <div class="article-byline u-meta-byline">
-        {{#primary_author}}<a aria-label="{{t "Post by"}} {{name}}" href="{{url}}" class="u-colorHoverPrimary u-colorInherit u-relative u-textCapitalize">{{name}}</a>{{/primary_author}}
+        {{#primary_author}}<a class="article-byline-author" aria-label="{{t "Post by"}} {{name}}" href="{{url}}" class="u-colorHoverPrimary u-colorInherit u-relative u-textCapitalize">{{name}}</a>{{/primary_author}}
         <span class="article-divider text--green">/</span>
         <time class="datetime u-meta-time" datetime="{{date format=" YYYY-MM-DD "}}">{{date published_at timeago="true"}}</time>
     </div>
