--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -99,6 +99,7 @@
 .u-floatRight { float: right; }
 .u-floatLeft { float: left; }
 
+.u-hide { display: none !important }
 //  flex
 .u-flex { @extend %flex }
 
