--- a/home.hbs
+++ b/home.hbs
@@ -27,10 +27,10 @@ into the {body} of the default.hbs template --}}
                 {{!-- story - partials/story/story.hbs --}}
                 {{#foreach posts from="2" to="12"}} {{> "story/story"}} {{/foreach}}
             </div>
-
-            {{!-- Load More - pagination --}}
-            <a href="#" class="load-more" aria-label="{{t "Load More"}}"><span class="gradient-text gradient-text--green">{{t "Load More"}}</span></a>
         </div>
+
+        {{!-- Load More - pagination --}}
+        <a href="#" class="js-load-more load-more u-pointer u-hide" aria-label="{{t "Load More"}}"><span class="gradient-text gradient-text--green">{{t "Load More"}}</span></a>
     </div>
 
     {{!-- sidebar - partials/sidebar/sidebar-home-top.hbs --}}
